# tef_decoder

./: .gitignore  CLAUDE.md  Multi Note 2.tef  Multi Note.parsed.abc  Multi Note.tef  hexdump.txt  main.py  pyproject.toml  sequential_3rd_string_quarter_beat_1_eigth_beat_2.tef  shuck_the_corn.abc  shuck_the_corn.ly  shuck_the_corn_banjo_only.tef  shuck_the_corn_parsed.mid  single_open_string_3_g3.tef  single_open_string_4_d3.tef
docs/: HUMAN_TAB_FORMAT.md  OPEN_TAB_FORMAT.md
samples/multi_note/: Multi Note - Two Track Offset.mid  Multi Note - Two Track Offset.tef  Multi Note.mid  hammar_on_2nd_string_eight_notes_beat_1_open_beat_and-of-1_fret_2.tef  two_simultaneus_notes_string_1_and_5_eigth_notes.tef
samples/single_note/: single_open_string_1_d4.tef  single_open_string_2_b3.tef  single_open_string_5_tg4.tef  string_1_fret_2_e4.tef  string_1_fret_3_f4.tef
samples/songs/: FoggyMountainBreakdown-G-Carr_v3.tef  angeline_the_baker_banjo_guitar_banjo_fifth_string_tuned_1_step_higher.mid  foggy_mountain_special.tef  mandolin_foggy_mountain_breakdown.tef  shuck_the_corn.mid  shuck_the_corn.tef  shuck_the_corn_melody.abc  shuck_the_corn_melody.mid
scripts/: bootstrap  utility
scripts/lib/: export_abc.py  export_json.py  export_midi.py  parse_tef.py  view_tab.py
src/tef_parser/: __init__.py  cli.py  otf.py  reader.py
tests/: CLAUDE.md  test_parser.py
tests/01_multi_note_simple/: CLAUDE.md  test
tests/02_angeline_banjo_guitar/: CLAUDE.md  test
tests/fixtures/: compare.py  (+1 more)
viewer/: index.html  mandolin_foggy_mountain_breakdown.otf.json  shuck_the_corn.otf.yaml
(+12 files in other folders)
