[project]
name = "tef-parser"
version = "0.1.0"
description = "Reverse-engineered parser for TablEdit .tef files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
tef = "tef_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tef_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
